レスポンシブ

--- a/youtube-clone-study/index.html
+++ b/youtube-clone-study/index.html
@@ -9,8 +9,9 @@
   <body>
     <header>
       <div class="title">
-        <img src="../img/youtubelogo.png" alt="" />
-        <p>Premium</p>
+          <img src="../img/youtubelogo.png" alt="" />
+          <a href="#top"><p>Premium</p></a>
+        </a>
       </div>
       <div class="menu">
         <div class="menuItem" id="1">すべて</div>
